[gd_scene load_steps=3 format=3 uid="uid://d3rdo1rm7w5sj"]

[ext_resource type="Script" path="res://sfx/scripts/player_menu.gd" id="1_rrscw"]
[ext_resource type="PackedScene" uid="uid://d0hv7sqdtsb4y" path="res://ui/scenes/levelselect2.tscn" id="2_garfm"]


[node name="PlayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrscw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -50.5
offset_right = 49.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Singleplayer
"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LAN Multiplayer"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="Levelselect2" parent="." instance=ExtResource("2_garfm")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]

[editable path="Levelselect2"]
